--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,5 +1,5 @@
 .container{
-    width: 450px;
+    width: 400px;
     background-color: rgb(245, 245, 245, 0.15);
     border-radius: 10px;
     text-align: center;
@@ -13,5 +13,12 @@
 }
 
 .input-field input{
-    
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255);
+    border-radius: 20px;
+    font-size: 16px;
+    padding: 10px 30px;
+    color: antiquewhite;
 }
