--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,5 +1,6 @@
 .container{
     width: 400px;
+    height: 300px;
     background-color: rgb(245, 245, 245, 0.15);
     border-radius: 10px;
     text-align: center;
@@ -10,6 +11,7 @@
     text-align: center;
     font-size: 30px;
     color: white;
+    margin-bottom: 10px;
 }
 
 .input-field input{
@@ -21,4 +23,45 @@
     font-size: 16px;
     padding: 10px 30px;
     color: antiquewhite;
+    margin-bottom: 10px;
+}
+
+.recall-forget input{
+    color: white;
+    
+}
+
+.btn{
+    
+    padding: 10px;
+    border-radius: 10px;
+    border-color: blanchedalmond;
+    width: 100px;
+    margin-bottom: 10px;
+}
+
+.account{
+    margin-bottom: 10px;
+    text-align: left;
+}
+
+.remember{
+    margin-right: 250px;   
+}
+
+.recall-forget a{
+    margin-right: 250px;
+}
+
+.recall-forget a:hover{
+    margin-right: 250px;
+    color: white;
+    opacity: 0.9;
+}
+
+.account a:hover{
+
+    margin-bottom: 10px;
+    text-align: left;
+    color: white;
 }
